@@ -64,6 +64,8 @@
 #include "PortProcedures.h"
 #include "StringProcedures.h"
 #include "Record.h"
+#include "Ratnum.h"
+#include "Flonum.h"
 #include "Equivalent.h"
 #include "ByteArrayBinaryInputPort.h"
 #include "UTF8Codec.h"
