@@ -1,6 +1,8 @@
 (import (rnrs)
         (mosh test))
 
+(test-false (= +nan.0 +nan.0))
+
 ;; R6RS doesn't say about follwing, but Mosh returns #t for-all.
 (test-true (equal? +nan.0 +nan.0))
 (test-true (equal? +nan.0 -nan.0))
